--- a/JavaScript/ejercicio1.htm
+++ b/JavaScript/ejercicio1.htm
@@ -20,7 +20,7 @@
 
     if(strokes === 1) {
         return names[0];
-    } else if (strokes >= par -2) {
+    } else if (strokes <= par -2) {
         return names [1];
     } else if (strokes=== par - 1) {
         return names [2];
@@ -35,7 +35,7 @@
     }
 }
 
-console.log(golfScore(5, 4))
+console.log(golfScore(3,7))
 </script></head>
 
 <body>
